--- a/tubbscreators.css
+++ b/tubbscreators.css
@@ -1,21 +1,26 @@
 h1{
-    color:#FF8C00;
-    font-family:Impact, Charcoal, sans-serif;
-    text-shadow:5px 3px #191970;
-    font-size:87px; 
     text-align:center;
 }
-img{
-    height: 80px;
-    width: 50px
+div{
+    height: 260px;
+    width: 270px;
+    background: linear-gradient(#Fa4500,#FF6347);
+    float: left;
+        box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    /*TODO fix padding-bottom*/
+    padding-bottom: 20px;
+    margin-right: 1em;
+    border-radius: 5px;
 }
 p{
-    color:#ffa500;
+    color:rgb(47,0,79);
+    color: rgba(47,0,79,.9);
 }
 /* =============
     Gradient fix
     ============ */
 body{
-    background-color: #FF6347;
+    height: 1000px;
 }
 
