--- a/tubbsorgin.css
+++ b/tubbsorgin.css
@@ -7,5 +7,5 @@ h2{
     Gradient fix
     ============ */
 body{
-    background-color: #FF6347;
+    height: 1000px;
 }
