--- a/tubbsteam.css
+++ b/tubbsteam.css
@@ -17,7 +17,7 @@ h1{
     Gradient fix
     ============ */
 body{
-    background-color: #FF6347;
+    height: 1000px;
 }
 
     
